--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Movers</title>
+    <link rel="stylesheet" type="text.css" href="assets/styles.css">
 </head>
 <body>
+    <!-- Navigation Bar-->
+
+
+    <!-- Change is inevitable-->
+
+    <!-- Cut the Hustle-->
+
+    <!-- Our Top Movers-->
+
+    <!-- Footer-->
     
 </body>
 </html>
