--- a/index.html
+++ b/index.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Movers</title>
-    <link rel="stylesheet" type="text.css" href="assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles.css">
 </head>
 <body>
-    <!-- Navigation Bar-->
-
-
-    <!-- Change is inevitable-->
+    <!-- Navigation Bar and header Section-->
+    <div class="header">
+        <div class="navbar">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li <a href="#movers">Movers</li>
+                <li>Login</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+        <div/>
+        <div class="change">
+            <h1>Change is inevitable but <br />
+            tasking. Find your <br />
+            reliable change partner</h1><br />
+            <h3>
+                In one roof, get the solutions to you <br />
+                house moving nightmares
+            </h3>
+        </div>
+    </div>
 
     <!-- Cut the Hustle-->
+
 
     <!-- Our Top Movers-->
 
