--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="assets/styles.css">
 </head>
 <body>
+    
     <!-- Navigation Bar and header Section-->
+    <section>
     <div class="header">
         <div class="navbar">
         <nav>
@@ -30,9 +32,24 @@
             </h3>
         </div>
     </div>
+    </section>
 
     <!-- Cut the Hustle-->
-
+    <section>
+    <div class="cut">
+        <div id="imagy">
+            <img src="assets/images/moving2 1.png">
+        </div>
+        <div id="hustle">
+            <h1>Cut the Hustle</h1><br />
+            <p>In this current tough economic <br />
+            situations, living is already a hustle. <br />
+        Why then should you worry about <br />
+    how you should move to live better?</p><br />
+    <button class="btn">Learn more</button>
+        </div>
+    </div>
+    </section>
 
     <!-- Our Top Movers-->
 
