Add image and content for Ufalme Movers and Movers Chapchap.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                             </table>
                     </div>
             </div>
+
+
             <div id="movera1">
                 <div><img src="assets/images/wewe 1.png"</div><br />
                 <div>
@@ -83,6 +85,37 @@
                     </table>
                 </div>
             </div>
+
+
+            <div id="movera2">
+                <div><img src="assets/images/movers 1.png"</div><br>
+                <div>
+                    <h3>Ufalme Movers</h3>
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+
+            <div id="movera3">
+                <div><img src="assets/images/chapchap 1.png"</div>
+                <div>
+                    <h3>Movers Chapchap</h3>
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
             
         </div>   
     </section>
