Add the images and appropriate content for songa mashinani and Upesi Logistics section.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
             <div id="movera3">
-                <div><img src="assets/images/chapchap 1.png"</div>
+                <div><img src="assets/images/chapchap 1.png"</div><br />
                 <div>
                     <h3>Movers Chapchap</h3>
                     <table>
@@ -116,7 +116,33 @@
                 </div>
             </div>
 
-            
+            <div id="Movera4">
+                <div><img src="assets/images/mashinani 1.png"</div><br />
+                <div>
+                    <h3>Songa mashinani</h3>
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <div>
+                <div><img src="assets/images/songa 1.png"</div><br />
+                <div>
+                    <h3>Upesi Logistics</h3>
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>2</td>
+                            <t3>3</t3>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>   
     </section>
 
