Add the footer section, the social media icons codes and the columns.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <tr>
                             <td>1</td>
                             <td>2</td>
-                            <t3>3</t3>
+                            <td>3</td>
                         </tr>
                     </table>
                 </div>
@@ -147,6 +147,48 @@
     </section>
 
     <!-- Footer-->
-    
+    <section class="footer">
+        <div id="foot-header">
+            <h2><span id="start">Move at a tap of</span><span id="button"> a button</span></h2>
+        </div>
+        <div id="chini">
+            <div class="social">
+                <div id="facebook"><img src=""</div>
+                <div id="twitter"><img src=""</div>
+                <div id="instagram"><img src=""</div>
+            </div>
+
+            <div class="column1">
+                <h5>Column Heading</h5>
+                <ul>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                </ul>
+            </div>
+
+            <div class="column2">
+                <h5>Column Heading</h5>
+                <ul>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                </ul>
+            </div>
+
+            <div class="column3">
+                <h5>Column Heading</h5>
+                <ul>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                </ul>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
