Style the top section-the navigation bar and header section to add background image.

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
         </div>
         <div id="chini">
             <div class="social">
-                <div id="facebook"><img src=""</div>
-                <div id="twitter"><img src=""</div>
-                <div id="instagram"><img src=""</div>
+                <div id="facebook"><i class="fab fa-facebook-f"></i></div>
+                <div id="twitter"><i class="fab fa-twitter"></i></div>
+                <div id="instagram"><i class="fab fa-instagram"></i></div>
             </div>
 
             <div class="column1">
