Change the margin top and margin left of the section assigned class change and increase the font size of the text.

--- a/index.html
+++ b/index.html
@@ -9,28 +9,26 @@
 <body>
 
     <!-- Navigation Bar and header Section-->
-    <section>
+    <section class="head">
     <div class="header">
-        <div class="navbar">
         <nav>
             <ul>
                 <li>Home</li>
                 <li>About Us</li>
                 <li <a href="#movers">Movers</li>
-                <li>Login</li>
-                <li>Login</li>
+                <li <button id="btn1">Login</button>
+                <li <button id="btn2">Login</button>
             </ul>
         </nav>
-        <div/>
-        <div class="change">
-            <h1>Change is inevitable but <br />
+    <div/>
+    <div class="change">
+            <span class="span1"><h1>Change is inevitable but <br />
             tasking. Find your <br />
-            reliable change partner</h1><br />
-            <h3>
+            reliable change partner</h1><br /></span>
+            <span class="span2"><h3>
                 In one roof, get the solutions to you <br />
                 house moving nightmares
-            </h3>
-        </div>
+            </h3></span>
     </div>
     </section>
 
