--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section>
     <div class="cut">
         <div id="imagy">
-            <img src="assets/images/moving2 1.png">
+            <img src="assets/images/moving2 1.png" height="500" width="500">
         </div>
         <div id="hustle">
             <h1>Cut the Hustle</h1><br />
