Design the Learn more button as required.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <img src="assets/images/moving2 1.png" height="500" width="500">
         </div>
         <div id="hustle">
-            <h1>Cut the Hustle</h1><br />
+            <span id="cutty"><h1>Cut the Hustle</h1></span><br />
             <p>In this current tough economic <br />
             situations, living is already a hustle. <br />
         Why then should you worry about <br />
     how you should move to live better?</p><br />
-    <button class="btn">Learn more</button>
+    <button class="btna">Learn more</button>
         </div>
     </div>
     </section>
