--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     </section>
 
     <!-- Our Top Movers-->
-    <section>
+    <section class="topy">
         <div class="top">
             <h1>Our Top Movers</h1>
         </div>
         <div class="movers">
             <div id="movera">
-                <div><img src="assets/images/ehem 1.png"</div><br />
+                <div><img src="assets/images/ehem 1.png" width="250" height="200"</div><br />
                     <div>
                         <h3>A+ movers</h3>
                             <table>
@@ -71,7 +71,7 @@
 
 
             <div id="movera1">
-                <div><img src="assets/images/wewe 1.png"</div><br />
+                <div><img src="assets/images/wewe 1.png" width="250" height="200"</div><br />
                 <div>
                     <h3>Maridadi Home Logistics</h3>
                     <table>
@@ -86,7 +86,7 @@
 
 
             <div id="movera2">
-                <div><img src="assets/images/movers 1.png"</div><br>
+                <div><img src="assets/images/movers 1.png" width="250" height="200"</div><br>
                 <div>
                     <h3>Ufalme Movers</h3>
                     <table>
@@ -101,7 +101,7 @@
 
 
             <div id="movera3">
-                <div><img src="assets/images/chapchap 1.png"</div><br />
+                <div><img src="assets/images/chapchap 1.png" width="250" height="200"</div><br />
                 <div>
                     <h3>Movers Chapchap</h3>
                     <table>
@@ -115,7 +115,7 @@
             </div>
 
             <div id="Movera4">
-                <div><img src="assets/images/mashinani 1.png"</div><br />
+                <div><img src="assets/images/mashinani 1.png" width="250" height="200"</div><br />
                 <div>
                     <h3>Songa mashinani</h3>
                     <table>
@@ -129,7 +129,7 @@
             </div>
 
             <div>
-                <div><img src="assets/images/songa 1.png"</div><br />
+                <div><img src="assets/images/songa 1.png" width="250" height="200"</div><br />
                 <div>
                     <h3>Upesi Logistics</h3>
                     <table>
