Add and style the contents of our top movers section to make them display as required, adjust the padding and margin of elements therein.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             <h1>Our Top Movers</h1>
         </div>
         <div class="movers">
-            <div id="movera">
-                <div><img src="assets/images/ehem 1.png" width="250" height="200"</div><br />
-                    <div>
+            <div class="movera">
+                <img src="assets/images/ehem 1.png" width="250" height="200"><br />
                         <h3>A+ movers</h3>
                             <table>
                                 <tr>
@@ -66,13 +65,11 @@
                                     <td>3</td>
                                 </tr>
                             </table>
-                    </div>
             </div>
 
 
-            <div id="movera1">
-                <div><img src="assets/images/wewe 1.png" width="250" height="200"</div><br />
-                <div>
+            <div class="movera">
+                <img src="assets/images/wewe 1.png" width="250" height="200"><br />
                     <h3>Maridadi Home Logistics</h3>
                     <table>
                         <tr>
@@ -81,13 +78,11 @@
                             <td>3</td>
                         </tr>
                     </table>
-                </div>
             </div>
 
 
-            <div id="movera2">
-                <div><img src="assets/images/movers 1.png" width="250" height="200"</div><br>
-                <div>
+            <div class="movera">
+                <img src="assets/images/movers 1.png" width="250" height="200"><br>
                     <h3>Ufalme Movers</h3>
                     <table>
                         <tr>
@@ -96,13 +91,11 @@
                             <td>3</td>
                         </tr>
                     </table>
-                </div>
             </div>
 
 
-            <div id="movera3">
-                <div><img src="assets/images/chapchap 1.png" width="250" height="200"</div><br />
-                <div>
+            <div class="movera">
+                <img src="assets/images/chapchap 1.png" width="250" height="200"><br />
                     <h3>Movers Chapchap</h3>
                     <table>
                         <tr>
@@ -111,12 +104,10 @@
                             <td>3</td>
                         </tr>
                     </table>
-                </div>
             </div>
 
-            <div id="Movera4">
-                <div><img src="assets/images/mashinani 1.png" width="250" height="200"</div><br />
-                <div>
+            <div class="movera">
+                <img src="assets/images/mashinani 1.png" width="250" height="200"><br />
                     <h3>Songa mashinani</h3>
                     <table>
                         <tr>
@@ -125,12 +116,10 @@
                             <td>3</td>
                         </tr>
                     </table>
-                </div>
             </div>
 
-            <div>
-                <div><img src="assets/images/songa 1.png" width="250" height="200"</div><br />
-                <div>
+            <div class="movera">
+                <img src="assets/images/songa 1.png" width="250" height="200"><br />
                     <h3>Upesi Logistics</h3>
                     <table>
                         <tr>
@@ -139,7 +128,6 @@
                             <td>3</td>
                         </tr>
                     </table>
-                </div>
             </div>
         </div>   
     </section>
