style page 1 of the project.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- Navigation Bar and header Section-->
     <section class="head">
     <div class="header">
-        <nav>
+        <div class="nav">
             <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li <a href="#movers">Movers</li>
-                <li <button id="btn1">Login</button>
-                <li <button id="btn2">Login</button>
+                <li class="list">Home</li>
+                <li class="list">About Us</li>
+                <li class="list" <a href="#movers">Movers</li>
+                <li class="list"<button id="btn1">Login</button></li>
+                <li class="list"<button id="btn2">Login</button></li>
             </ul>
         </nav>
     <div/>
