--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li class="list">Home</li>
                 <li class="list">About Us</li>
-                <li class="list" <a href="#movers">Movers</li>
+                <li class="list" <a href="./quick.html">Movers</li>
                 <li class="list"<button id="btn1">Login</button></li>
                 <li class="list"<button id="btn2">Login</button></li>
             </ul>
