--- a/quick.html
+++ b/quick.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Movers</title>
-    <link rel="stylesheet" type="text/css" href="./assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="./assets/quick.css">
 </head>
 <body>
     <!-- Navigation Bar -->
