Add the body section below the navbar.

--- a/quick.html
+++ b/quick.html
@@ -19,7 +19,7 @@
           </ul>
         </div>
       </nav><br />
-      <div>
+    <div>
         <div class="down">
             <div>
                 <h3>Modern House</h3>
@@ -29,6 +29,32 @@
               <h3>$450,000</h3>
               <p>$2,800/sq ft</p>
           </div>
-      </div>
+    </div>
+    <div class="body">
+        <img src="assets/images/Property House.png" height="450" width="600">
+        <div class="body1">
+            <div class="body2">
+                <div class="bodya">
+                    <img src="">
+                    <div>
+                        <span class="span1"><h6>Kayley Hall</h6><span><br />
+                        <span class="span2"><h6>view profile</h6></span>
+                    </div>
+                </div>
+                <div class="bodyb">
+                    <h6>Name</h6>
+                </div>
+                <div>
+                    <h6>Phone</h6>
+                </div>
+                <div>
+                    <h6>Email</h6>
+                </div>
+                <div>
+                    <button class="learn">Learn More</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
