style the form section next to the image section just below the navigation bar.

--- a/quick.html
+++ b/quick.html
@@ -31,23 +31,25 @@
           </div>
     </div>
     <div class="body">
+        <div class="imagyra">
         <img src="assets/images/Property House.png" height="450" width="600">
+        </div>
         <div class="body1">
             <div class="body2">
                 <div class="bodya">
                     <img src="">
                     <div>
-                        <span class="span1"><h6>Kayley Hall</h6><span><br />
+                        <span class="span1"><h6>Kayley Hall</h6><span>
                         <span class="span2"><h6>view profile</h6></span>
                     </div>
                 </div>
                 <div class="bodyb">
                     <h6>Name</h6>
                 </div>
-                <div>
+                <div class="bodyc">
                     <h6>Phone</h6>
                 </div>
-                <div>
+                <div class="bodyd">
                     <h6>Email</h6>
                 </div>
                 <div>
