Add details section.

--- a/quick.html
+++ b/quick.html
@@ -32,7 +32,29 @@
     </div>
     <div class="body">
         <div class="imagyra">
-        <img src="assets/images/Property House.png" height="450" width="600">
+        <img src="assets/images/Property House.png" height="450" width="600"><br />
+        <div class="tuimages">
+            <div class="tuimages">
+                <img src="assets/images/Rectangle.png" height="100" width="100">
+                <img src="assets/images/Rectangle-1.png" height="100" width="100">
+                <img src="assets/images/Rectangle-2.png" height="100" width="100">
+                <img src="assets/images/Rectangle-3.png" height="100" width="100">
+                <img src="assets/images/Rectangle-4.png" height="100" width="100">
+                <img src="assets/images/Rectangle-5.png" height="100" width="100">
+                <img src="assets/images/Rectangle-6.png" height="100" width="100">
+            </div>
+            <div class="details">
+                <h6>Details</h6>
+                <table>
+                    <tr>
+                        <td>4</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>1</td>
+                        <td>2007</td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="body1">
             <div class="body2">
