Add the features section.

--- a/quick.html
+++ b/quick.html
@@ -76,6 +76,32 @@
                     </p>
                 </div>
             </div>
+            <div class="fetu">
+                <span class="features"><h5>Features</h5></span>
+                <div class="air">
+                    <ul class="hapo">
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                    </ul>
+                    <ul class="hapo">
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                    </ul>
+                    <ul class="hapo">
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                        <li>Air Conditioning</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="body1">
             <div class="body2">
@@ -99,6 +125,9 @@
                     <button class="learn">Learn More</button>
                 </div>
             </div>
+        </div>
+        <div>
+
         </div>
     </div>
 </body>
