Erase codes to design the page again.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Movers</title>
     <link rel="stylesheet" type="text/css" href="assets/styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
 
@@ -15,12 +16,13 @@
             <ul>
                 <li class="list">Home</li>
                 <li class="list">About Us</li>
-                <li class="list" <a href="http://127.0.0.1:5500/quick.html">Movers</li>
-                <li class="list"<button id="btn1">Login</button></li>
-                <li class="list"<button id="btn2">Login</button></li>
+                <li class="list"><a href="./quick.html">Movers</a></li>
+                <li class="list"><button class="btn1">Login</button></li>
+                <li class="list"><button class="btn1">Login</button></li>
             </ul>
         </nav>
-    <div/>
+        <div/>
+    </div>
     <div class="change">
             <span class="span1"><h1>Change is inevitable but <br />
             tasking. Find your <br />
@@ -60,7 +62,7 @@
                         <h3>A+ movers</h3>
                             <table>
                                 <tr>
-                                    <td>1</td>
+                                    <td><i class='bx bxs-bed'></i>1</td>
                                     <td>2</td>
                                     <td>3</td>
                                 </tr>
