--- a/quick.html
+++ b/quick.html
@@ -8,18 +8,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav>
-        <div class="thelinks">
-          <ul>
-            <li> Nav Link </li>
-            <li> Nav Link </li>
-            <li> Nav Link </li>
-            <li> Nav Link</li>
-            <li><button class="work">Work with us</button></li>
-          </ul>
-        </div>
-      </nav><br />
-    <div>
+ 
         <div class="down">
             <div>
                 <h3>Modern House</h3>
@@ -30,105 +19,53 @@
               <p>$2,800/sq ft</p>
           </div>
     </div>
-    <div class="body">
-        <div class="imagyra">
-        <img src="assets/images/Property House.png" height="450" width="600"><br />
-        <div class="tuimages">
-            <div class="tuimages">
-                <img src="assets/images/Rectangle.png" height="100" width="100">
-                <img src="assets/images/Rectangle-1.png" height="100" width="100">
-                <img src="assets/images/Rectangle-2.png" height="100" width="100">
-                <img src="assets/images/Rectangle-3.png" height="100" width="100">
-                <img src="assets/images/Rectangle-4.png" height="100" width="100">
-                <img src="assets/images/Rectangle-5.png" height="100" width="100">
-                <img src="assets/images/Rectangle-6.png" height="100" width="100">
-            </div>
-            <div class="details">
-                <h6>Details</h6>
-                <table>
-                    <tr>
-                        <td>4</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>1</td>
-                        <td>2007</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="description">
-                <div id="des">
-                    <h5>Description</h5>
-                </div>
-                <div>
-                    <p>At vero et iusto odio dignissimos ducimus, qui haec putat,ut ipsi auctori huius disciplinae placet:<br />
-                        constituam, quid sit numeranda naec me ab ilo inventore veritstis et expedita distinctio nam libero tempore,<br />
-                        cum memoriter,tum etiam ac ratione.
-                    </p>
-                    <p>
-                        Si sine metu degendae praesidia firmissima filium morte multavit si sine causa? quae fuerit causa, mox <br />
-                        videro; interea hoc tenebo, si ob rem vluptas assumenda est,quid sit extremum et inter mediocrem <br />
-                        animadversionem atque natum sit, a natura incorrupte.
-                    </p>
-                    <p>
-                        Omne animal, simul atque in sanguinem suum tam inportuno tamque crudeli; sin,ut earum motus et <br />
-                        accusarmus et argumentandum et dolore suo sanciret militaris imperii disciplinam exercitumque in liberos <br />
-                        atque haec ratio late patet in quo pertineant non possim.
-                    </p>
-                </div>
-            </div>
-            <div class="fetu">
-                <span class="features"><h5>Features</h5></span>
-                <div class="air">
-                    <ul class="hapo">
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                    </ul>
-                    <ul class="hapo">
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                    </ul>
-                    <ul class="hapo">
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                        <li>Air Conditioning</li>
-                    </ul>
-                </div>
-            </div>
+
+
+    </div>
+   
+    <!-- Footer-->
+    <section class="footer">
+        <div id="foot-header">
+            <h2><span id="start">Make your dreams a reality</span><span id="button"> work with us</span></h2>
         </div>
-        <div class="body1">
-            <div class="body2">
-                <div class="bodya">
-                    <img src="">
-                    <div>
-                        <span class="span1"><h6>Kayley Hall</h6><span>
-                        <span class="span2"><h6>view profile</h6></span>
-                    </div>
-                </div>
-                <div class="bodyb">
-                    <h6>Name</h6>
-                </div>
-                <div class="bodyc">
-                    <h6>Phone</h6>
-                </div>
-                <div class="bodyd">
-                    <h6>Email</h6>
-                </div>
-                <div>
-                    <button class="learn">Learn More</button>
-                </div>
+        <div id="chini">
+            <div class="social">
+                <div id="facebook"><i class="fab fa-facebook-f"></i></div>
+                <div id="twitter"><i class="fab fa-twitter"></i></div>
+                <div id="instagram"><i class="fab fa-instagram"></i></div>
             </div>
-        </div>
-        <div>
+
+            <div class="column1">
+                <h5>Column Heading</h5>
+                <ul>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                </ul>
+            </div>
+
+            <div class="column2">
+                <h5>Column Heading</h5>
+                <ul>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                </ul>
+            </div>
+
+            <div class="column3">
+                <h5>Column Heading</h5>
+                <ul>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                    <li>Link goes here</li>
+                </ul>
+            </div>
 
         </div>
-    </div>
+    </section>
 </body>
 </html>
