Add the top Navigation bar to our page.

--- a/quick.html
+++ b/quick.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <!-- Navigation Bar -->
- 
+    <div class="topnav">
+        <ul>
+            <li>Nav Link</li>
+            <li>Nav Link</li>
+            <li>Nav Link</li>
+            <li>Nav Link</li>
+            <li><span><button class="btn1">Work with us </span><span class="arrow">&#8594</span></button></li>
+        </ul>
+    </div>
         <div class="down">
             <div>
                 <h3>Modern House</h3>
