Add logo, cause the navigation links to move on the far right and the logo to remain on the far left, putting a linear gradient below the navigation bar, style the navigation bar.

--- a/quick.html
+++ b/quick.html
@@ -9,6 +9,9 @@
 <body>
     <!-- Navigation Bar -->
     <div class="topnav">
+        <div class="logo">
+            <span class="Great">Great </span><span class="Movers"> Movers</span>
+        </div>
         <ul>
             <li>Nav Link</li>
             <li>Nav Link</li>
@@ -17,6 +20,7 @@
             <li><span><button class="btn1">Work with us </span><span class="arrow">&#8594</span></button></li>
         </ul>
     </div>
+    <hr>
         <div class="down">
             <div>
                 <h3>Modern House</h3>
