Add a section called main body section to the body of the page and under it add a div give it a class named section1, bellow this div add another div of class = images having two more subdivs one of class=bigimages and another one class = smallimages.

--- a/quick.html
+++ b/quick.html
@@ -20,7 +20,7 @@
             <li><span><button class="btn1">Work with us </span><span class="arrow">&#8594</span></button></li>
         </ul>
     </div>
-    <hr>
+    <hr id="hr">
         <div class="down">
             <div>
                 <h3>Modern House</h3>
@@ -29,10 +29,28 @@
         <div>
               <h3>$450,000</h3>
               <p>$2,800/sq ft</p>
-          </div>
+        </div>
     </div>
 
 
+    <!--main body-->
+    <div class="section1">
+    <div class="images">
+        <div class="bigimage">
+            <img src="assets/images/Property House.png" height="450" width="600">
+        </div>
+        <div class="smallimages">
+            <img src="assets/images/Rectangle.png" height="100" width="100">
+            <img src="assets/images/Rectangle-1.png" height="100" width="100">
+            <img src="assets/images/Rectangle-2.png" height="100" width="100">
+            <img src="assets/images/Rectangle-3.png" height="100" width="100">
+            <img src="assets/images/Rectangle-4.png" height="100" width="100">
+            <img src="assets/images/Rectangle-5.png" height="100" width="100">
+            <img src="assets/images/Rectangle-6.png" height="100" width="100">
+        </div>
+    </div>
+    <div class="section2">
+    </div>
     </div>
    
     <!-- Footer-->
