Add the formlike section and its contents.

--- a/quick.html
+++ b/quick.html
@@ -34,7 +34,8 @@
 
 
     <!--main body-->
-    <div class="section1">
+<section class="sectioning">
+<div class="section1">
     <div class="images">
         <div class="bigimage">
             <img src="assets/images/Property House.png" height="450" width="600">
@@ -49,10 +50,30 @@
             <img src="assets/images/Rectangle-6.png" height="100" width="100">
         </div>
     </div>
-    <div class="section2">
+    <div class="formlike">
+        <div class="profileicon">
+            <span id="icon"><img></span><span id="name">Kayley Hall</span><br /><span class="view">view profile</span>
+        </div>
+        <div id="namy">
+            <h6>name </h6>
+        </div>
+        <div id="phone">
+            <h6>>Phone</h6>
+        </div>
+        <div id="email">
+            <h6>>Email</h6>
+        </div>
+        <div id="hello">
+            <h6>Hello, I am interested in...</h6>
+        </div>
+        <div>
+            <button id="btn2"><span id="word"> Learn more</span><span id="rightarrow"></span>&#8594</button>
+        </div>
     </div>
-    </div>
-   
+</div>
+</section>
+
+
     <!-- Footer-->
     <section class="footer">
         <div id="foot-header">
