Add social media icons on the footer section.

--- a/quick.html
+++ b/quick.html
@@ -106,6 +106,9 @@
         atque haec ratio late patet in quo pertineant non possim.
         </p>
 </div>
+<div>
+
+</div>
 
 
     <!-- Footer-->
@@ -115,9 +118,9 @@
         </div>
         <div id="chini">
             <div class="social">
-                <div id="facebook"><i class="fab fa-facebook-f"></i></div>
-                <div id="twitter"><i class="fab fa-twitter"></i></div>
-                <div id="instagram"><i class="fab fa-instagram"></i></div>
+                <div <i class='bx bxl-facebook'></i></div>
+                <div <i class='bx bxl-twitter' ></i></i></div>
+                <div <i class='bx bxl-instagram-alt' ></i></i></div>
             </div>
 
             <div class="column1">
